LAB01-IaC/Terraform/modules/vpc/1-main.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "gr18-main"
  }
}
